@@ -6,8 +6,8 @@ CREATE TABLE EXPERIMENT (
 	SCENARIO_ID INTEGER NOT NULL,
 	WEATHER_ID INTEGER NOT NULL,
 	RESEARCH_GROUP_ID INTEGER NOT NULL,
-	START_TIME DATE,
-	END_TIME DATE,
+	START_TIME TIMESTAMP,
+	END_TIME TIMESTAMP,
 	TEMPERATURE SMALLINT,
 	WEATHERNOTE VARCHAR (255),
 	IS_PRIVATE INTEGER DEFAULT 0 NOT NULL,
